[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Wheel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Wheel.gd" type="Script" id=2]

[node name="Wheel" type="Area2D"]
script = ExtResource( 2 )

[node name="Node" type="Control" parent="."]
margin_top = 16.0
margin_right = 396.0
margin_bottom = 431.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Node"]
position = Vector2( -0.150223, -12.5107 )
texture = ExtResource( 1 )

[node name="Area2D1" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node/Area2D1"]
position = Vector2( -0.840881, 0 )
polygon = PoolVector2Array( -167.652, -153.888, -103.56, -200.848, -14.2957, -234.703, -11.114, -206.386, -151.426, -124.299 )

[node name="Label" type="Label" parent="Node/Area2D1"]
margin_left = -98.1272
margin_top = -108.891
margin_right = -24.1272
margin_bottom = -78.8909
text = "+2%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Node/Area2D2"]
position = Vector2( -9.53516, -12.7136 )
rotation = 0.83664
polygon = PoolVector2Array( -167.423, -144.313, -103.56, -200.848, -17.0875, -233.577, -8.10582, -212.186, -144.879, -128.805 )

[node name="Label" type="Label" parent="Node/Area2D2"]
margin_left = 23.035
margin_top = -141.854
margin_right = 97.035
margin_bottom = -111.854
text = "+5%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D3" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Node/Area2D3"]
position = Vector2( 27.546, -2.11891 )
rotation = 1.50042
polygon = PoolVector2Array( -170.404, -137.608, -99.353, -196.325, 6.6897, -209.029, 53.3915, -199.66, 51.5766, -173.915, -148.955, -125.475 )

[node name="Label" type="Label" parent="Node/Area2D3"]
margin_left = 97.0523
margin_top = -49.6777
margin_right = 171.053
margin_bottom = -19.6777
text = "-15%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D4" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Node/Area2D4"]
position = Vector2( 104.887, 216.395 )
rotation = 1.50042
polygon = PoolVector2Array( -170.404, -137.608, -104.629, -106.419, -47.5863, -68.6189, -70.8161, -47.9525, -172.194, -112.718 )

[node name="Label" type="Label" parent="Node/Area2D4"]
margin_left = 87.7148
margin_top = 77.2009
margin_right = 161.715
margin_bottom = 107.201
text = "+10%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D5" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Node/Area2D5"]
position = Vector2( 46.6163, 341.147 )
rotation = 1.50042
polygon = PoolVector2Array( -167.383, -135.271, -138.522, -107.746, -113.117, -61.3471, -100.915, -8.44441, -96.5443, 36.3627, -124.124, 34.5273, -192.123, -115.773 )

[node name="Label" type="Label" parent="Node/Area2D5"]
margin_left = 13.881
margin_top = 134.876
margin_right = 87.881
margin_bottom = 164.876
text = "-50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D6" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Node/Area2D6"]
position = Vector2( -181.168, 394.12 )
rotation = 0.83664
polygon = PoolVector2Array( -167.828, -147.807, -103.56, -200.848, -6.17407, -253.885, 14.7484, -235.361, -23.3207, -196.146, -77.7001, -164.667, -149.375, -127.955 )

[node name="Label" type="Label" parent="Node/Area2D6"]
margin_left = -114.61
margin_top = 134.007
margin_right = -40.6092
margin_bottom = 164.007
text = "+200%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D7" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Node/Area2D7"]
position = Vector2( -241.558, 240.498 )
rotation = 0.83664
polygon = PoolVector2Array( -166.936, -142.807, -156.303, -155.118, -13.8558, -89.927, 5.1747, -69.8991, -33.2187, -63.4686, -77.6804, -61.8991, -136.885, -112.969 )

[node name="Label" type="Label" parent="Node/Area2D7"]
margin_left = -193.883
margin_top = 77.6151
margin_right = -119.883
margin_bottom = 107.615
text = "-20%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D8" type="Area2D" parent="Node"]
position = Vector2( 0, -16 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Node/Area2D8"]
position = Vector2( -166.424, 67.6288 )
rotation = 0.83664
polygon = PoolVector2Array( -165.018, -147.116, -132.605, -139.892, -112.25, -63.1268, -78.1788, 16.1408, -89.5356, 28.7255, -152.574, -59.5584 )

[node name="Label" type="Label" parent="Node/Area2D8"]
margin_left = -191.109
margin_top = -22.7821
margin_right = -117.109
margin_bottom = 7.21786
text = "-5%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Node/Area2D1" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node/Area2D1" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Node/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Node/Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Node/Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_exited" from="Node/Area2D3" to="." method="_on_Area2D3_body_exited"]
[connection signal="body_entered" from="Node/Area2D4" to="." method="_on_Area2D4_body_entered"]
[connection signal="body_exited" from="Node/Area2D4" to="." method="_on_Area2D4_body_exited"]
[connection signal="body_entered" from="Node/Area2D5" to="." method="_on_Area2D5_body_entered"]
[connection signal="body_exited" from="Node/Area2D5" to="." method="_on_Area2D5_body_exited"]
[connection signal="body_entered" from="Node/Area2D6" to="." method="_on_Area2D6_body_entered"]
[connection signal="body_exited" from="Node/Area2D6" to="." method="_on_Area2D6_body_exited"]
[connection signal="body_entered" from="Node/Area2D7" to="." method="_on_Area2D7_body_entered"]
[connection signal="body_exited" from="Node/Area2D7" to="." method="_on_Area2D7_body_exited"]
[connection signal="body_entered" from="Node/Area2D8" to="." method="_on_Area2D8_body_entered"]
[connection signal="body_exited" from="Node/Area2D8" to="." method="_on_Area2D8_body_exited"]
